<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memory Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="memory_game_title">Memory Game</string>
    <string name="welcome_text">Welcome%1$s!</string>
    <string name="last_practice_num_days">You last practiced [x] days ago</string>
    <string name="new_game_button_text">New Game</string>
    <string name="settings_button_text">Settings</string>
    <string name="tutorial_button_text">Tutorial</string>
    <string name="scores_button_text">My Scores</string>
    <string name="about_button_text">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="gender_textview_title">Gender</string>
    <string name="name_edit_text_hint">Name</string>
    <string name="age_edit_text_hint">Age</string>
    <string name="save_button_text">Save</string>
    <string name="title_activity_game">Memory Game</string>
    <string name="reset_button_text">Reset</string>
    <string name="click_to_start_text_view_title">Click to Start</string>
    <string name="you_won_game_over_fragment">You Won!</string>
    <string name="your_time_game_over_dialog">Your time was: %1$s</string>
    <string name="title_activity_scores">High Scores</string>
    <string name="no_high_score">No high scores</string>
    <string name="restart_dialog_label">Restart</string>
    <string name="main_menu_dialog">Main Menu</string>
    <string name="high_scores_dialog_label">High Scores</string>
    <string name="welcome_message_settings">Welcome to the Memory Game! Please fill out the settings before playing.</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="levels_instruction_text_view">To begin, click New Game and choose your level. You can choose from Beginner, Intermediate, and Hard.
        The harder the level, the more squares the game board has.</string>
    <string name="gameplay_tutorial_text">To play, you must identify the two pictures that match. If you pick two images that match, the images will stay on the board. However, if the two images don\'t match, the images will be hidden again. To win, you must have all the images be facing up.</string>
    <string name="high_scores_tutorial_text">Once you\'ve played, you can view your personal high scores in the High Scores tab.</string>
    <string name="easy_text_score_view_pager">Easy</string>
    <string name="medium_text_score_view_pager">Medium</string>
    <string name="hard_text_score_view_pager">Hard</string>
    <string name="levels_title_tutorial_view_pager">Levels</string>
    <string name="gameplay_title_tutorial_view_pager">Gameplay</string>
    <string name="highscore_title_tutorial_view_pager">Highscore</string>
    <string name="cancel_button_text_difficulty_dialog">Cancel</string>
    <string name="choose_dificulty_text_difficulty_dialog">Choose Difficulty</string>
    <string name="you_must_enter_a_name_error_text">You must enter a name</string>
    <string name="you_must_enter_an_age_error_text">You must enter an age</string>
    <string name="first_time_update_settings_dialog_message">It looks like this is your first time playing Memory Game! Would you like to update your settings?</string>
    <string name="game_play_title_text">Game Play</string>
    <string name="high_scores_title">High Scores</string>
    <string name="levels_title_text">Levels</string>

</resources>
